# ecommerce-AIbackend

./: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  TODO.md  a2a_server.py  agent.py  app.py  main.py  pyproject.toml  test_client.html  tools.json
a2a-doc-reference/: a2aproject.github.io_A2A_latest_.md  a2aproject.github.io_A2A_latest_community_.md  a2aproject.github.io_A2A_latest_partners_.md  a2aproject.github.io_A2A_latest_sdk_python_.md  a2aproject.github.io_A2A_latest_specification_.md  a2aproject.github.io_A2A_latest_topics_a2a-and-mcp_.md  a2aproject.github.io_A2A_latest_topics_key-concepts_.md  a2aproject.github.io_A2A_latest_topics_life-of-a-task_.md  a2aproject.github.io_A2A_latest_topics_streaming-and-async_.md  a2aproject.github.io_A2A_latest_topics_what-is-a2a_.md
src/ecommerce_agent/: __init__.py
src/ecommerce_agent/a2a/: server.py
src/ecommerce_agent/core/: __init__.py  agent.py  config.py  workflow.py
src/ecommerce_agent/models/: __init__.py  requests.py  responses.py
src/ecommerce_agent/server/: app.py  middleware.py  routes.py
src/ecommerce_agent/tools/: __init__.py  handlers.py  registry.py
src/ui_control_agent/: __init__.py  agent.py  config.py  memory.py  workflow.py
src/ui_control_agent/a2a/: __init__.py  server.py
src/ui_control_agent/core/: __init__.py  agent.py  agent_config.yaml  backend_tools.py  config.py  memory.py  workflow.py
src/ui_control_agent/models/: __init__.py
src/ui_control_agent/prompts/: system.yaml
src/ui_control_agent/server/: __init__.py  app.py  routes.py
static/: test_client.html
(+4 files in other folders)
