[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecommerce-agent"
version = "0.1.0"
description = "AI agent for conversational ecommerce control"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # A2A and agent workflow
    "a2a-sdk>=0.1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.66",
    "pyyaml>=6.0.2",
    "aiohttp>=3.12.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
ecommerce-agent = "app:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "/.git",
    "/.venv",
    "__pycache__",
    "*.pyc",
    ".env*",
    "TODO.md"
]

[tool.ruff]
line-length = 88
target-version = "py311" 
